Fix fields wrapping by using flex fields in "Send to mail" form

--- a/sass/mail.scss
+++ b/sass/mail.scss
@@ -38,7 +38,7 @@ body.page-printmail {
             label {
                 width: 120px;
             }
-            textarea {
+            .form-textarea-wrapper {
                 width: calc(100% - 120px);
                 min-width: 250px;
             }
